Add new dependency, update filesystems config

--- a/.env.example
+++ b/.env.example
@@ -46,10 +46,13 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=sail
+AWS_SECRET_ACCESS_KEY=password
 AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_BUCKET=photos
+AWS_URL=http://minio:9000
+AWS_ENDPOINT=http://minio:9000/photos
+AWS_BUCKET_ENDPOINT=true
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 PUSHER_APP_ID=
